# multi-agent-terraform

./: .env.example  .gitignore  ARCHITECTURE.md  IaC_LLM_Evaluation_Concise.csv  README.md  SETUP.md  baseline.py  cleanup.py  eval.py  evaluate.py  graph.py  merge.py  pyproject.toml  requirements.txt  run.py  run_metric.py  score.py  trace.py
agents/: architecture.py  deployment.py  engineering.py  security.py  validation.py
bootstrap/: .terraform.lock.hcl
core/: _classify_probe.py  build_catalog.py  catalog.json  catalog.py  check_tiers.py  destroy.py  errors.py  llm.py  llm1.py  llm_judge.py  metrics.py  parsers.py  provider.tf  rego_eval.py  retry_control.py  state.py  terraform.py
dataset/: __init__.py  data-dev.csv  data-no-deploy.csv  data-success.csv  demo-trace.csv  evaluator.py
floci/: docker-compose.yml
floci/one/: docker-compose.yml
prompts/: architecture.py  architecture_v2.py  deployment.py  engineering.py  security.py  security_v2.py  validation.py
scripts/: populate_provider_cache.py
