[project]
name = "tfmultiagent"
version = "0.1.0"
description = "Multi-agent framework for Terraform IaC generation with LangGraph + NVIDIA NIM"
requires-python = ">=3.11"
dependencies = [
    # Dataset
    "datasets>=4.8.5",
    "pyyaml>=6.0.3",
    # Multi-agent framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    # Reliability
    "tenacity>=8.0.0",       # retry + exponential backoff cho NVIDIA NIM API
    "filelock>=3.0.0",       # tránh data race khi ghi checkpoint file
    "python-dotenv>=1.0.0",  # load .env vào os.environ
    "json-repair>=0.30.0",  # fallback parse cho LLM JSON quirks (escaped quotes, truncation)
    "langchain-openai>=1.2.2",
    "checkov>=3.2.529",
    "code-bert-score>=0.4.1",
]

[tool.uv]
# Checkov và OPA cài qua system package manager hoặc pip install checkov opa
# Terraform cài qua: https://developer.hashicorp.com/terraform/install
